# Sisu

./: .cursorrules  .gitignore  Cargo.toml  GETTING-STARTED.md  HauntedLibraryCargo.toml  Makefile  README.md  RepositoryStructure.md  breath.sh  command reference.md  configure  contributing.md  pet.gd  sisu-portal.html  sisu-progress-readme.md
Cazzy-Coding/: ASCII_learn.py  README.md  StephenReadME.md  appliance_ai_assistant.py  ascii_bin_art.py  citizen_ai_dashboard.py  enviro_ai_assistant.py  ethical_ai_detector.py  finance_ai_prototype.py  generate_synthetic_ml_realestate.py  generate_synthetic_realestate_data.py  health_ai_prototype.py  interactive_citizen_ai.py  make_synthetic_health_data.py  omniai_superintelligence.py  predictive_policy_ai.py
GoDot/: Alien_flower.gd  Alien_gameManager.gd  Example_movimg_ppl.gd  FractalslPet.gd  HyperDimensionalEchoes.gd  Pet.gd  Pet2.gd  Player.gd  QuantumCanvas.gd  TimeFracture.gd  UpsidedownWorld  example_collect.gd  flower_script.gd  game_manager.gd  nodesetup.md  pet_buttons.gd  petsave_load.gd  player2.gd  script_logic.gd
Haskell/: HaskellFundamentalsPro.hs  LearnHaskell.hs  LearnHaskellAdvanced.hs  Readme_Haskell.md
Lua/: Alien_echo.lua  absurd_room  learn_lua.lua  weird.lua
R/: buttom-up.r  concepts.r  concepts2.r  graphs.r  lesson2.r  lesson3  lesson3.r  lesson4.r  lesson_1.r  pandemic_sim.r  visuals_in_r.r  (+1 more)
c/: aquarium.c  (+24 more)
rust/testfiles/: Cargo.toml  integration.rs  life_sountrack_cargo.toml  sisu_rust_test_suite.rs  test_basics.rs  test_edge_cases.rs  test_logic.rs  test_panic.rs  test_params.rs  test_utils.rs
(+305 files in other folders)
